@@ -18,6 +18,8 @@ synaptic (0.62.2) unstable; urgency=low
       assertion failure error (LP: #38397, closes: #341645)
   * common/rpackageview.cc:
     - add new "Missing Recommends" default filter
+  * common/rpackage.cc:
+    - fix code to get candidate origin
 
  --
 
